--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <p>If we make changes to this privacy policy, we will update the date below.</p>
 
         <h2>Contact</h2>
-        <p>Questions? Contact us at <a href="mailto:YOUR_EMAIL">YOUR_EMAIL</a></p>
+        <p>Questions? Contact us at <a href="mailto:jhrad.apps@proton.me">jhrad.apps@proton.me</a></p>
 
         <p class="updated">Last updated: January 2026</p>
     </div>
